Bug 1539846. Ensure building rect changes cause invalidations. r=mstange

Typically this would be handled by the visible region of the layer
changing. However, since we build the container layer for the filter
item directly the visible region doesn't get set or checked. As a
shortcut to using more of FLB we just ensure the building rect hasn't
changed.

The situations under which this bugs shows up are somewhat rare:
- The filtered item needs to be in transform so that it's bounds
  are not changed by scrolling.
- The filtered item needs to contain items that change their drawing
  depending on the building rect. In this case an image with downscale
  on decode.
- The filter needs to be unsupported by WebRender.

Differential Revision: https://phabricator.services.mozilla.com/D29879

--HG--
extra : moz-landing-system : lando